projects/compiler/test/parser/decoratordecl_error_bad_trait.2.out
Error at %FILE_NAME%:1:23
Unexpected token '(', expected 'identifier':
  |  decorator FooBar123 : (Foo, Int) {
                           ^