projects/compiler/test/parser/decoratordecl_error_bad_trait.2.abra
decorator FooBar123 : (Foo, Int) {

}
